--- a/aed.html
+++ b/aed.html
@@ -6,37 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script src="http://leaflet.cloudmade.com/dist/leaflet.js"></script>
+  <script src="map.js"></script>
   <script>
-    function initMap() {
-      var attr_osm = 'Map data &copy; <a href="http://openstreetmap.org/">OpenStreetMap</a> contributors',
-          attr_mapbox = 'Imagery &copy; <a href="http://mapbox.com/about/maps/">MapBox</a>'
-          attr_overpass = 'POI via <a href="http://www.overpass-api.de/">Overpass API</a>';
-
-      var osm = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {attribution: [attr_osm, attr_overpass].join(', ')}),
-          mapbox_streets = new L.TileLayer("http://{s}.tiles.mapbox.com/v3/mapbox.mapbox-streets/{z}/{x}/{y}.png", {attribution: [attr_mapbox, attr_osm, attr_overpass].join(', ')}),
-          mapbox_light = new L.TileLayer("http://{s}.tiles.mapbox.com/v3/mapbox.mapbox-light/{z}/{x}/{y}.png", {attribution: [attr_mapbox, attr_osm, attr_overpass].join(', ')}),
-              mapbox_simple = new L.TileLayer("http://{s}.tiles.mapbox.com/v3/mapbox.mapbox-simple/{z}/{x}/{y}.png", {attribution: [attr_mapbox, attr_osm, attr_overpass].join(', ')});
-
-      map = new L.Map('map', {
-          center: new L.LatLng(47.25, 11.3),
-          zoom: 13,
-          layers: mapbox_light,
-      });
-
-      map.addControl(new L.Control.Layers({
-          'MapBox Streets': mapbox_streets,
-          'MapBox Light': mapbox_light,
-          'MapBox Simple': mapbox_simple,
-          'OpenSteetMap': osm,
-      }));
-
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(function(position) {
-            var center = new L.LatLng(position.coords.latitude, position.coords.longitude);
-            map.setView(center, 13);
-        });
-      }
-    }
+    var map;
+    $(function () {
+      map = initMap();
+      loadAed();
+    });
 
     function loadAed() {
       var AedIcon = L.Icon.extend({
@@ -79,11 +55,6 @@
 </head>
 <body>
   <div id="map"></div>
-
-  <script>
-      initMap();
-      loadAed();
-  </script>
 </body>
 </html>
 
