Update to Leaflet 0.4.4, compatibility changes

--- a/aed.html
+++ b/aed.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script src="http://leaflet.cloudmade.com/dist/leaflet.js"></script>
+  <script src="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.js"></script>
   <script src="map.js"></script>
   <script>
     var map;
@@ -15,7 +15,7 @@
     });
 
     function loadAed() {
-      var AedIcon = L.Icon.extend({
+      var aedIcon = L.icon({
         iconUrl: 'http://upload.wikimedia.org/wikipedia/commons/thumb/3/38/AED_Symbol.svg/16px-AED_Symbol.svg.png',
         iconSize: new L.Point(16, 16),
         iconAnchor: new L.Point(8, 8),
@@ -32,7 +32,7 @@
       $.getJSON(aedUrl, function(data) {
         $.each(data.elements, function(ign, i) {
           var pos = new L.LatLng(i.lat, i.lon);
-          var icon = new AedIcon();
+          var icon = aedIcon;
           var popup = aedInfo(i.tags);
           var marker = new L.Marker(pos, {icon: icon}).bindPopup(popup);
           map.addLayer(marker);
@@ -41,8 +41,8 @@
     }
 
   </script>
-  <link rel="stylesheet" href="http://leaflet.cloudmade.com/dist/leaflet.css" />
-  <!--[if lte IE 8]><link rel="stylesheet" href="http://leaflet.cloudmade.com/dist/leaflet.ie.css" /><![endif]-->
+  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.css" />
+  <!--[if lte IE 8]><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.ie.css" /><![endif]-->
   <style>
     body {
       padding: 0;
