--- a/ivb.html
+++ b/ivb.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script src="http://leaflet.cloudmade.com/dist/leaflet.js"></script>
+  <script src="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.js"></script>
   <script src="map.js"></script>
   <script>
     var map;
@@ -39,19 +39,19 @@
         pointToLayer: function (latlng) {
           return new L.CircleMarker(latlng);
         },
+        onEachFeature: function (e, layer) {
+          layer.bindPopup(e.properties.name);
+          layer.setStyle(e.properties.style);
+        },
       });
-      layer.on('featureparse', function (e) {
-        e.layer.bindPopup(e.properties.name);
-        e.layer.setStyle(e.properties.style);
-      });
-      layer.addGeoJSON(data);
+      layer.addData(data);
       map.addLayer(layer);
       map.getControl().addOverlay(layer, 'Linie ' + name);
     }
 
   </script>
-  <link rel="stylesheet" href="http://leaflet.cloudmade.com/dist/leaflet.css" />
-  <!--[if lte IE 8]><link rel="stylesheet" href="http://leaflet.cloudmade.com/dist/leaflet.ie.css" /><![endif]-->
+  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.css" />
+  <!--[if lte IE 8]><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.ie.css" /><![endif]-->
   <style>
     body {
       padding: 0;
