--- a/ivb.html
+++ b/ivb.html
@@ -11,7 +11,7 @@
     var map;
     $(function () {
       map = initMap();
-      $.getJSON('http://www.overpass-api.de/api/interpreter?data=[out:json];(relation[operator="Innsbrucker Verkehrsbetriebe"][type=route][ref!~NL];node(r)->.x;way(r);node(w););out body;', function (d) {
+      $.getJSON('http://www.overpass-api.de/api/interpreter?data=[out:json];(relation[operator="Innsbrucker Verkehrsbetriebe"][type=route][route=tram][ref~"1|3|6|STB"][name!="IVB Linie 3"];node(r)->.x;way(r);node(w););out body;', function (d) {
         var featureCollections = {};
         parseOverpassJSON(d, null, null, function (p) {
           var fc = featureCollections[p.tags.ref] || {type: 'FeatureCollection', features: []};
@@ -24,7 +24,9 @@
             fc.features.push({
               type: 'Feature',
               geometry: mem.obj.geometry,
-              properties: {name: n, style: {color: p.tags.color || '#000000'}},
+              properties: {name: n, style: {opacity: 1, color: p.tags.color || '#000000'}},
+              tags: mem.obj.tags,
+              reltags: p.tags,
             });
           });
         });
@@ -34,12 +36,20 @@
       });
     });
 
+    var halts = {};
     function addGeoJSON(name, data) {
       var layer = L.geoJson(data, {
         style: function (e) {
           return e.properties.style;
         },
         pointToLayer: function (data, latlng) {
+          var id = [data.reltags.ref, data.tags.name].join('/');
+          if (halts[id] || !data.tags.name) return L.circleMarker(latlng, {weight: 0, fill: false});
+          halts[id] = true;
+          var className = 'leaflet-div-icon L' + data.reltags.ref + ' ' + data.tags.name.replace(/\/| /g, '-').replace(/\(|\)/g, '');
+          L.marker(latlng, {
+            icon: L.divIcon({className: className, html: data.tags.name || ''}),
+          }).addTo(map);
           return L.circleMarker(latlng, {fillOpacity: 0.5, weight: 5}).setRadius(4);
         },
         onEachFeature: function (e, layer) {
@@ -59,6 +69,40 @@
     }
     html, body, #map {
       height: 100%;
+      font: 12px 'Droid Sans', sans-serif;
+    }
+    .leaflet-div-icon {
+      width: auto !important;
+      height: auto !important;
+      border: none;
+      background: none;
+      text-shadow: 1px 1px 2px white;
+      font-size: 8px;
+      white-space: nowrap;
+      margin: -1em 0 0 1em !important;
+    }
+    .L1.Stubaitalbahnhof,
+    .L6.Bergisel,
+    .Hauptbahnhof-STB {
+      display: none;
+    }
+    .Maria-Theresien-Straße---Marktgraben,
+    .Philippine-Welser-Straße, .Triumphpforte,
+    .Höttinger-Au, .Höttinger-Auffahrt,
+    .Bretterkeller, .Tantegert, .Lans-Sistrans, .Lansersee, .Bahnhof-Igls,
+    .Mutters, .Burgstall, .Hölltal, .Gärberbach {
+      margin-top: 0.5em !important;
+    }
+    .Anichstraße---Rathausgalerien,
+    .Fritz-Konzert-Straße {
+      margin-top: -2em !important;
+    }
+    .Bürgerstraße {
+      margin-top: -2.5em !important;
+      margin-left: 0em !important;
+    }
+    .Mutters, .Natters {
+      margin-left: -5em !important;
     }
   </style>
 </head>
