IVB: tune labels.

--- a/ivb.html
+++ b/ivb.html
@@ -95,12 +95,17 @@
       display: none;
     }
     .Maria-Theresien-Straße---Marktgraben,
-    .Philippine-Welser-Straße, .Triumphpforte,
-    .Höttinger-Au, .Höttinger-Auffahrt,
-    .Bretterkeller, .Tantegert, .Lans-Sistrans, .Lansersee, .Bahnhof-Igls,
+    .Leipziger-Platz, .Philippine-Welser-Straße, .Triumphpforte,
+    .Höttinger-Au-West, .Höttinger-Auffahrt,
+    .Bretterkeller, .Tummelplatz, .Tantegert, .Lans-Sistrans, .Lansersee, .Bahnhof-Igls,
     .Mutters, .Burgstall, .Hölltal, .Gärberbach {
       margin-top: 0.5em !important;
     }
+    .Maria-Theresien-Straße---Marktgraben {
+      width: 15em !important;
+      white-space: inherit;
+    }
+    .Fürstenweg,
     .Anichstraße---Rathausgalerien,
     .Fritz-Konzert-Straße {
       margin-top: -2em !important;
