--- a/ivb.html
+++ b/ivb.html
@@ -11,7 +11,26 @@
     var map;
     $(function () {
       map = initMap();
+      var proposed = L.layerGroup();
+      map.getControl().addOverlay(proposed, 'Erweiterung');
       // Adapt query
+      $.getJSON('http://www.overpass-api.de/api/interpreter?data=[out:json];(way(47.2,11.3,47.3,11.6)[railway=proposed];node(w););out body;', function (d) {
+        parseOverpassJSON(d, null, function (w) {
+          L.geoJson({
+            type: 'Feature',
+            geometry: w.geometry,
+          }, {
+            style: function (e) {
+              return {
+                opacity: 1,
+                color: '#666',
+                //svg: {'stroke-dasharray': '6,8'},
+                weight: 3,
+              };
+            },
+          }).addTo(proposed);
+        }, null);
+      });
       $.getJSON('http://www.overpass-api.de/api/interpreter?data=[out:json];(relation[operator="Innsbrucker Verkehrsbetriebe"][type=route][route=tram][ref~"1|3|6|STB"][name!="IVB Linie 3"];node(r)->.x;way(r);node(w););out body;', function (d) {
         var featureCollections = {};
         parseOverpassJSON(d, null, null, function (p) {
