--- a/ivb.html
+++ b/ivb.html
@@ -113,19 +113,19 @@
     .Hauptbahnhof-STB {
       display: none;
     }
-    .Maria-Theresien-Straße---Marktgraben,
+    .Maria-Theresien-Straße,
     .Leipziger-Platz, .Philippine-Welser-Straße, .Triumphpforte,
     .Höttinger-Au-West, .Höttinger-Auffahrt,
     .Bretterkeller, .Tummelplatz, .Tantegert, .Lans-Sistrans, .Lansersee, .Bahnhof-Igls,
     .Mutters, .Burgstall, .Hölltal, .Gärberbach {
       margin-top: 0.5em !important;
     }
-    .Maria-Theresien-Straße---Marktgraben {
+    .Maria-Theresien-Straße {
       width: 15em !important;
       white-space: inherit;
     }
     .Fürstenweg,
-    .Anichstraße---Rathausgalerien,
+    .Anichstraße-Rathausgalerien,
     .Fritz-Konzert-Straße {
       margin-top: -2em !important;
     }
