Use standard mapnik style, CSS transform gray

--- a/ivb.html
+++ b/ivb.html
@@ -98,6 +98,10 @@
       height: 100%;
       font: 12px 'Droid Sans', sans-serif;
     }
+    .leaflet-tile {
+      -webkit-filter: grayscale(1);
+      opacity: 0.5 !important;
+    }
     .leaflet-div-icon {
       width: auto !important;
       height: auto !important;
