--- a/ivb.html
+++ b/ivb.html
@@ -8,130 +8,11 @@
   <script src="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.js"></script>
   <script src="semicircle.js"></script>
   <script src="map.js"></script>
+  <script src="map.ivb.js"></script>
   <script>
-    var map;
     $(function () {
-      map = initMap();
-      var proposed = L.layerGroup();
-      map.getControl().addOverlay(proposed, 'Erweiterung');
-      // Adapt query
-      $.getJSON('http://www.overpass-api.de/api/interpreter?data=[out:json];(way(47.2,11.3,47.3,11.6)[railway=proposed];node(w););out body;', function (d) {
-        parseOverpassJSON(d, null, function (w) {
-          L.geoJson({
-            type: 'Feature',
-            geometry: w.geometry,
-          }, {
-            style: function (e) {
-              return {
-                opacity: 1,
-                color: '#666',
-                //svg: {'stroke-dasharray': '6,8'},
-                weight: 3,
-              };
-            },
-          }).addTo(proposed);
-        }, null);
-      });
-      $.getJSON('http://www.overpass-api.de/api/interpreter?data=[out:json];(relation[operator="Innsbrucker Verkehrsbetriebe"][type=route][route=tram][ref~"1|3|6|STB"][name!="IVB Linie 3"];node(r)->.x;way(r);node(w););out body;', function (d) {
-        var featureCollections = {};
-        parseOverpassJSON(d, null, null, function (p) {
-          var fc = featureCollections[p.tags.ref] || {type: 'FeatureCollection', features: []};
-          featureCollections[p.tags.ref] = fc;
-
-          var stops = p.members.filter(function (mem) {
-            return mem.type == 'node' && mem.role.match(/stop/);// && mem.obj.tags.name && mem.obj.tags.name.match(/Klinik/);
-          }).map(function (mem) {
-            return mem.ref;
-          });
-
-          var stopAngle = {};
-          var getAngleForStop = function (stop) {
-            p.members.map(function (mem) {
-              if (mem.type != 'way') return;
-              // index of node in way
-              var idx = mem.obj.nodes.indexOf(stop);
-              if (idx < 0) return;
-              // take two adjacent ways
-              // ignore projection and use lat/lon directly (shouldn't make a big difference as 2 nodes are rather close)
-              var lonlat1 = mem.obj.coordinates[idx == 0 ? 0 : idx - 1];
-              var lonlat2 = mem.obj.coordinates[idx == 0 ? 1 : idx];
-              // determine in which order those two nodes are used
-              var polarity;
-              var idxWay = p.members.indexOf(mem);
-              if (idxWay == 0) {
-                // assumes ways in a block, i.e., w/o stops in between
-                // f first node linked to next way then -1 else +1
-                polarity = p.members[1].obj.nodes.indexOf(mem.obj.nodes[0]) >= 0 ? 180 : 0;
-              } else {
-                // if first node linked to previous way then +1 else -1
-                polarity = p.members[idxWay - 1].obj.nodes.indexOf(mem.obj.nodes[0]) >= 0 ? 0 : 180;
-              }
-              // compute direciton, i.e., angle (with mathematical meaning: 0=horizontal, anti-clockwise)
-              var angle = polarity + Math.atan2(lonlat2[1] - lonlat1[1], lonlat2[0] - lonlat1[0]) * 180 / Math.PI;
-              //console.log(p.tags.name, stop, mem.obj, idx, idx == 0 ? 0 : idx - 1, idx == 0 ? 1 : idx, lonlat1, lonlat2, idxWay, polarity, angle);
-              stopAngle[stop] = Math.round(angle);
-            });
-          };
-          stops.map(getAngleForStop);
-
-          p.members.map(function (mem) {
-            if (!mem.obj || mem.role == 'platform') return;
-            fc.features.push({
-              type: 'Feature',
-              geometry: mem.obj.geometry,
-              id: mem.obj.id,
-              // Adapot style/color
-              properties: {style: {opacity: 1, color: p.tags.color || '#000000'}},
-              tags: mem.obj.tags,
-              reltags: p.tags,
-              popup: '<img style="width:27px; height:27px" src="http://efa.ivb.at/ivb/images/buttons/ivb_button_'
-                + p.tags.ref.toLowerCase() + '.png">'
-                + (mem.obj.tags && mem.obj.tags.name ? '&nbsp;' + mem.obj.tags.name : ''),
-              angle: stopAngle[mem.ref],
-            });
-          });
-        });
-        $.each(featureCollections, function (name, data) {
-          addGeoJSON(name, data);
-        });
-      });
+      IVB.init();
     });
-
-    var halts = {};
-    function addGeoJSON(name, data) {
-      var layer = L.geoJson(data, {
-        style: function (e) {
-          return e.properties.style;
-        },
-        // Displaying of points, e.g., halts
-        pointToLayer: function (data, latlng) {
-          // Adapot handling of duplicate stations of same line
-          if (data.tags && data.tags.name && data.id != 287054151) {
-            var id = [data.reltags.ref, data.tags.name].join('/');
-            if (!halts[id]) {
-              // Adapt css classes of halt name
-              var className = [
-                'leaflet-div-icon', 'L' + data.reltags.ref,
-                data.tags && data.tags.name ? data.tags.name.replace(/\/| /g, '-').replace(/\(|\)/g, '') : ''].join(' ');
-              // Add halt name as DivIcon
-              L.marker(latlng, {
-                icon: L.divIcon({className: className, html: data.tags.name || ''}),
-              }).addTo(map);
-              halts[id] = true;
-            }
-          }
-          // Add/return halt as CircleMarker
-          return typeof data.angle === 'undefined'
-            ? new L.CircleMarker(latlng, {fillOpacity: 1, weight: 0}).setRadius(4)
-            : new L.SemicircleMarker(latlng, {fillOpacity: 1, weight: 0}).setRadius(8).setAngle(-1 * data.angle);
-        },
-        onEachFeature: function (e, layer) {
-          layer.bindPopup(e.popup);
-        },
-      }).addTo(map);
-      map.getControl().addOverlay(layer, 'Linie ' + name);
-    }
-
   </script>
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.css" />
   <!--[if lte IE 8]><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.ie.css" /><![endif]-->
