--- a/aed.html
+++ b/aed.html
@@ -16,7 +16,7 @@
 
     function loadAed() {
       var aedIcon = L.icon({
-        iconUrl: 'http://upload.wikimedia.org/wikipedia/commons/thumb/3/38/AED_Symbol.svg/16px-AED_Symbol.svg.png',
+        iconUrl: 'https://upload.wikimedia.org/wikipedia/commons/thumb/b/bc/Automated_External_Defibrillator_%28symbol%29.svg/16px-Automated_External_Defibrillator_%28symbol%29.svg.png',
         iconSize: new L.Point(16, 16),
         iconAnchor: new L.Point(8, 8),
         shadowSize: new L.Point(0, 0),
